--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,18 @@
 [project]
 name = "light-rag"
 version = "0.1.0"
-description = "Add your description here"
+description = "A demonstration RAG system using PydanticAI, PostgreSQL, and FastAPI"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.0",
+    "uvicorn>=0.30.0",
+    "pydantic-ai[openai]>=0.0.10",
+    "logfire[asyncpg,fastapi]>=0.50.0",
+    "asyncpg>=0.29.0",
+    "markitdown[pdf]>=0.0.1a4",
+    "python-multipart>=0.0.9",
+    "jinja2>=3.1.0",
+    "python-dotenv>=1.0.0",
+    "httpx>=0.27.0",
+]
