--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn>=0.30.0",
-    "pydantic-ai[openai]>=0.0.10",
+    "pydantic-ai>=0.4.2",
     "logfire[asyncpg,fastapi]>=0.50.0",
     "asyncpg>=0.29.0",
     "markitdown[pdf]>=0.0.1a4",
@@ -15,4 +15,6 @@ dependencies = [
     "jinja2>=3.1.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.27.0",
+    "chonkie>=0.1.0",
+    "orjson>=3.10.0",
 ]
