--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ dependencies = [
     "chonkie>=0.1.0",
     "orjson>=3.10.0",
     "google-generativeai>=0.8.5",
+    "pydantic[email]>=2.11.7",
 ]
