Add comprehensive YAML-based deployment system
Features:
- deployment.yml with complete configuration management
- Python deployment manager with CLI interface
- Version tracking and environment validation
- Railway-specific deployment automation
- Health checks and monitoring configuration
- Environment variable management
- Database migration automation

Usage:
- ./deploy status - Show deployment status
- ./deploy version - Show version information
- ./deploy validate - Validate environment
- ./deploy deploy - Deploy to production

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,6 @@ dependencies = [
     "google-generativeai>=0.8.5",
     "pydantic[email]>=2.11.7",
     "sentence-transformers>=3.0.0",
+    "pyyaml>=6.0.0",
+    "requests>=2.31.0",
 ]
