Add proper migration script and fix PostGIS dependency
- Create run_migrations.py script that runs all SQL files in order
- Track applied migrations to avoid conflicts
- Fix PostGIS dependency for pgrouting extension
- Update docker-compose to use new migration script
- Add custom Dockerfile.postgres with all required extensions

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '3.8'
 
 services:
-  # PostgreSQL database with pgvector extension
+  # PostgreSQL database with pgvector and pgrouting extensions
   db:
-    image: pgvector/pgvector:pg16
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
     container_name: lightrag-db
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
@@ -131,7 +132,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: ${POSTGRES_DB:-lightrag}
-    command: ["python", "scripts/setup_db.py"]
+    command: ["python", "scripts/run_migrations.py"]
     networks:
       - lightrag-network
     restart: "no"
